# dsd

./: CMakeLists.txt
project/: CMakeLists.txt
project/shaders/: light.frag  light.vert  normal.frag  normal.vert
project/src/: Transform.h  config.h  core.cpp  core.h  input.h  light.cpp  light.h  main.cpp  material.h  mesh.cpp  mesh.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  texturebuffer.cpp  texturebuffer.h
